--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,7 @@ nav {
   padding: 2rem 0;
   h1 {
     font-size: 3rem;
+    font-family: 'Bitter', sans-serif;
   }
 }
 
@@ -25,28 +26,25 @@ main {
 }
 
 table {
-  width: 90%;
+  width: 60%;
+  font-family: 'IBM Plex Sans', sans-serif;
+  //border-collapse: collapse;
 }
-table,
-th,
-td {
-  font-family: 'Bitter', sans-serif;
-}
-
 th div {
   display: flex;
   align-content: center;
   justify-content: space-between;
-  font-size: 1.3rem;
-  padding: 0.1rem 0.5rem;
+  font-size: 2rem;
+  padding: 0.1rem 0.3rem 0.1rem 0.1rem;
   .order i {
     cursor: pointer;
   }
 }
 
 td {
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   text-align: center;
+  height: 4rem;
 }
 
 tr:nth-child(odd) {
@@ -54,4 +52,11 @@ tr:nth-child(odd) {
 }
 tr:nth-child(even) {
   background-color: #ddd;
+}
+
+tr:nth-child(odd):hover {
+  background-color: #eee;
+}
+tr:nth-child(even):hover {
+  background-color: #ccc;
 }
