--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,7 @@ main {
 table {
   width: 60%;
   font-family: 'IBM Plex Sans', sans-serif;
+  display: table;
   //border-collapse: collapse;
 }
 th div {
