--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ th {
   cursor: pointer;
   font-size: 1.4rem;
   background-color: #f3f2f2;
+  font-weight: normal;
 }
 
 th div {
@@ -79,6 +80,7 @@ td {
   font-size: 1.5rem;
   text-align: center;
   height: 4rem;
+  font-weight: bold;
 }
 
 tr:nth-child(odd) {
