--- a/css/style.scss
+++ b/css/style.scss
@@ -42,6 +42,7 @@ th {
   cursor: pointer;
   font-size: 1.4rem;
   background-color: #f3f2f2;
+  font-weight: normal;
 
   div {
     display: flex;
@@ -62,6 +63,7 @@ td {
   font-size: 1.5rem;
   text-align: center;
   height: 4rem;
+  font-weight: bold;
 }
 
 tr:nth-child(odd) {
