--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ main {
           justify-content: center;
 }
 
+table,
+th,
+td {
+  border: 1px solid #c0a6d8;
+}
+
 table {
   width: 60%;
   font-family: 'IBM Plex Sans', sans-serif;
@@ -51,6 +57,7 @@ th {
   cursor: pointer;
   font-size: 1.4rem;
   background-color: #f3f2f2;
+  width: 9rem;
 }
 
 th div {
@@ -79,6 +86,8 @@ td {
   font-size: 1.5rem;
   text-align: center;
   height: 4rem;
+  padding: 0 1rem;
+  width: 9rem;
 }
 
 tr:nth-child(odd) {
@@ -99,5 +108,9 @@ table tbody tr:nth-child(even):hover td {
 
 .column-hover {
   color: red;
+}
+
+.no-wrap {
+  white-space: nowrap;
 }
 /*# sourceMappingURL=style.css.map */
