--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,12 @@ main {
   justify-content: center;
 }
 
+table,
+th,
+td {
+  border: 1px solid $terciaryColor;
+}
+
 table {
   width: 60%;
   //table-layout: fixed;
@@ -42,6 +48,7 @@ th {
   cursor: pointer;
   font-size: 1.4rem;
   background-color: #f3f2f2;
+  width: 9rem;
 
   div {
     display: flex;
@@ -62,6 +69,8 @@ td {
   font-size: 1.5rem;
   text-align: center;
   height: 4rem;
+  padding: 0 1rem;
+  width: 9rem;
 }
 
 tr:nth-child(odd) {
@@ -82,4 +91,8 @@ table tbody tr:nth-child(even):hover td {
 
 .column-hover {
   color: red;
+}
+
+.no-wrap {
+  white-space: nowrap;
 }
