--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,7 @@ html {
 
 nav {
   display: flex;
+  width: 100%;
   justify-content: center;
   padding: 2rem 0;
   h1 {
@@ -26,73 +27,106 @@ nav {
   }
 }
 
+.world-report {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  //justify-content: center;
+  align-items: center;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.total,
+.active-cases,
+.closed-cases {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  border-bottom: 1px solid $terciaryColor;
+  align-items: center;
+}
+
 main {
   display: flex;
-  justify-content: center;
+  //justify-content: center;
 }
 
-table,
-th,
-td {
-  border: 1px solid $terciaryColor;
-}
-
-table {
-  width: 60%;
-  //table-layout: fixed;
+.table {
+  display: flex;
+  flex-direction: column;
   font-family: 'IBM Plex Sans', sans-serif;
-  display: table;
-  border-collapse: collapse;
-}
-th {
-  cursor: pointer;
-  font-size: 1.4rem;
-  background-color: #f3f2f2;
-  width: 9rem;
+  border: 1px solid $terciaryColor;
+  margin: 0 2rem;
 
-  div {
+  .header-container {
     display: flex;
-    align-content: center;
-    justify-content: space-between;
-    padding: 0.2rem 0.5rem;
-    text-align: left;
-    line-height: 2rem;
+    flex-direction: column;
+    .header-row {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .header {
+      min-width: 10rem;
+      max-width: 10rem;
+      height: 4rem;
+      font-size: 1.3rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      text-align: left;
+      padding: 0 0.5rem;
+      cursor: pointer;
+      border: 1px solid $terciaryColor;
+      background-color: #fff;
+
+      .order {
+        padding-left: 1rem;
+
+        img {
+          width: 1rem;
+        }
+      }
+    }
+  }
+  .data-container {
+    display: flex;
+    flex-direction: column;
+
+    .data-row {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+
+      .cell {
+        min-width: 10rem;
+        max-width: 10rem;
+        height: 4rem;
+        font-size: 1.3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border: 1px solid $terciaryColor;
+      }
+    }
   }
 }
-th:hover {
-  background-color: darken(#f3f2f2, 10%);
-}
-.order img {
-  width: 1rem;
-}
-td {
-  font-size: 1.5rem;
-  text-align: center;
-  height: 4rem;
-  padding: 0 1rem;
-  width: 9rem;
-}
 
-tr:nth-child(odd) {
+.data-row:nth-child(odd) {
   background-color: $primaryColor;
 }
-
-tr:nth-child(even) {
+.data-row:nth-child(even) {
   background-color: $secondaryColor;
 }
 
-table tbody tr:nth-child(odd):hover td {
-  background-color: darken($primaryColor, 10%);
-}
-
-table tbody tr:nth-child(even):hover td {
-  background-color: darken($secondaryColor, 10%);
-}
-
-.column-hover {
-  color: red;
-}
-
-.no-wrap {
-  white-space: nowrap;
+.error-message {
+  width: 100%;
+  font-size: 3rem;
+  margin-top: 2rem;
+  text-align: center;
+  font-family: 'IBM Plex Sans', sans-serif;
+  color: $primaryColor;
 }
