--- a/css/style.css
+++ b/css/style.css
@@ -21,22 +21,22 @@ nav {
 }
 
 nav h1 {
-  font-size: 6rem;
+  font-size: 3rem;
   font-family: 'Bitter', sans-serif;
-  line-height: 6rem;
-  margin-left: 2rem;
+  line-height: 3rem;
+  margin-left: 1rem;
   color: #cbbbda;
 }
 
 nav img {
-  height: 6rem;
+  height: 3rem;
 }
 
 .world-report {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -45,7 +45,8 @@ nav img {
       -ms-flex-align: center;
           align-items: center;
   font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
   margin-bottom: 2rem;
 }
 
@@ -80,9 +81,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   border: 1px solid #c0a6d8;
-  margin: 0 2rem;
+  margin: 2rem;
 }
 
 .table .header-container {
@@ -106,10 +107,10 @@ main {
 }
 
 .table .header-container .header {
-  min-width: 10rem;
-  max-width: 10rem;
-  height: 4rem;
-  font-size: 1.3rem;
+  min-width: 8rem;
+  max-width: 8rem;
+  height: 3rem;
+  font-size: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -156,10 +157,10 @@ main {
 }
 
 .table .data-container .data-row .cell {
-  min-width: 10rem;
-  max-width: 10rem;
-  height: 4rem;
-  font-size: 1.3rem;
+  min-width: 8rem;
+  max-width: 8rem;
+  height: 3rem;
+  font-size: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
