--- a/css/style.scss
+++ b/css/style.scss
@@ -16,25 +16,26 @@ nav {
   justify-content: center;
   padding: 2rem 0;
   h1 {
-    font-size: 6rem;
+    font-size: 3rem;
     font-family: 'Bitter', sans-serif;
-    line-height: 6rem;
-    margin-left: 2rem;
+    line-height: 3rem;
+    margin-left: 1rem;
     color: $primaryColor;
   }
   img {
-    height: 6rem;
+    height: 3rem;
   }
 }
 
 .world-report {
-  width: 100%;
   display: flex;
+  width: 100%;
   flex-direction: column;
   //justify-content: center;
   align-items: center;
   font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
   margin-bottom: 2rem;
 }
 
@@ -56,9 +57,9 @@ main {
 .table {
   display: flex;
   flex-direction: column;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   border: 1px solid $terciaryColor;
-  margin: 0 2rem;
+  margin: 2rem;
 
   .header-container {
     display: flex;
@@ -69,10 +70,10 @@ main {
     }
 
     .header {
-      min-width: 10rem;
-      max-width: 10rem;
-      height: 4rem;
-      font-size: 1.3rem;
+      min-width: 8rem;
+      max-width: 8rem;
+      height: 3rem;
+      font-size: 1rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -101,10 +102,10 @@ main {
       width: 100%;
 
       .cell {
-        min-width: 10rem;
-        max-width: 10rem;
-        height: 4rem;
-        font-size: 1.3rem;
+        min-width: 8rem;
+        max-width: 8rem;
+        height: 3rem;
+        font-size: 1rem;
         display: flex;
         justify-content: center;
         align-items: center;
