--- a/css/style.scss
+++ b/css/style.scss
@@ -14,16 +14,16 @@ nav {
   display: flex;
   width: 100%;
   justify-content: center;
-  padding: 2rem 0;
+  text-align: center;
+  padding: 2rem;
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
     font-family: 'Bitter', sans-serif;
-    line-height: 3rem;
-    margin-left: 1rem;
-    color: $primaryColor;
+    line-height: 4rem;
+    color: $terciaryColor;
   }
   img {
-    height: 3rem;
+    height: 4rem;
   }
 }
 
@@ -33,10 +33,9 @@ nav {
   flex-direction: column;
   //justify-content: center;
   align-items: center;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 2rem;
 }
 
 .total,
@@ -44,9 +43,13 @@ nav {
 .closed-cases {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  border-bottom: 1px solid $terciaryColor;
+  margin: 1rem;
   align-items: center;
+  text-align: left;
+  * {
+    margin: 0.2rem;
+    color: $primaryColor;
+  }
 }
 
 main {
@@ -57,7 +60,6 @@ main {
 .table {
   display: flex;
   flex-direction: column;
-  font-family: 'Noto Sans', sans-serif;
   border: 1px solid $terciaryColor;
   margin: 2rem;
 
@@ -82,6 +84,8 @@ main {
       cursor: pointer;
       border: 1px solid $terciaryColor;
       background-color: #fff;
+      font-weight: bold;
+      font-family: 'Noto Sans', sans-serif;
 
       .order {
         padding-left: 1rem;
@@ -111,6 +115,8 @@ main {
         align-items: center;
         text-align: center;
         border: 1px solid $terciaryColor;
+        font-weight: bold;
+        font-family: 'Noto Sans', sans-serif;
       }
     }
   }
@@ -137,6 +143,13 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  font-size: 1.3rem;
+  font-family: 'Noto Sans', sans-serif;
+  color: $primaryColor;
+  a {
+    text-decoration: none;
+    color: $terciaryColor;
+  }
 }
 
 @media all and(min-width: 1360px) {
