added totals and view by country link

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,3 +1,4 @@
 $primaryColor: #a888cc;
 $secondaryColor: #eee;
-$terciaryColor: #8e79be;
+$terciaryColor: #987cb8;
+$backgroundColor: rgb(247, 247, 247);
