--- a/css/style.scss
+++ b/css/style.scss
@@ -71,9 +71,15 @@ nav {
 .search {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin: 2rem;
+  align-items: center;
+  margin: 2rem 0;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 1.2rem;
+  color: $terciaryColor;
   input {
+    margin-top: 0.5rem;
     text-align: center;
     background-color: $backgroundColor;
     border: 2px solid $primaryColor;
@@ -192,5 +198,27 @@ footer {
 @media all and(min-width: 1360px) {
   main {
     justify-content: center;
+  }
+  .table {
+    .header-container {
+      .header-row {
+        .header {
+          min-width: 10rem;
+          max-width: 10rem;
+          height: 4rem;
+          font-size: 1.3rem;
+        }
+      }
+    }
+    .data-container {
+      .data-row {
+        .cell {
+          min-width: 10rem;
+          max-width: 10rem;
+          height: 4rem;
+          font-size: 1.3rem;
+        }
+      }
+    }
   }
 }
