--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
 }
 
 .table .header-container .header-row {
